--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">CongestionDegreeTest</string>
     <string name="dummy">仮データ</string>
+    <string name="reload">更新</string>
 </resources>
